feat: add sql server foreign data wrapper

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -10,13 +10,14 @@ nav:
     - Installation: 'installation.md'
     - Wrappers:
       - Airtable: 'airtable.md'
+      - Auth0: 'auth0.md'
       - BigQuery: 'bigquery.md'
       - ClickHouse: 'clickhouse.md'
       - Firebase: 'firebase.md'
       - Logflare: 'logflare.md'
       - S3: 's3.md'
       - Stripe: 'stripe.md'
-      - Auth0: 'auth0.md'
+      - SQL Server: 'mssql.md'
     - Contributing: 'contributing.md'
 
 theme:
