--- a/wrappers/.ci/docker-compose.yaml
+++ b/wrappers/.ci/docker-compose.yaml
@@ -38,6 +38,15 @@ services:
       interval: 10s
       timeout: 5s
       retries: 20
+  cognito:
+    image: humanmade/local-cognito
+    ports:
+      - "3333:3333"
+    healthcheck:
+      test: curl --fail http://0.0.0.0:3333/ || exit 1
+      interval: 11s
+      timeout: 6s
+      retries: 3
 
   stripe:
     image: stripe/stripe-mock:v0.144.0
