--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -75,7 +75,6 @@ airtable_fdw = [
 cognito_fdw = [
     "aws-sdk-cognitoidentityprovider",
     "aws-config",
-    "aws-types",
     "reqwest",
     "reqwest-middleware",
     "reqwest-retry",
@@ -169,6 +168,10 @@ aws-config = { version = "1.1.1", optional = true }
 aws-sdk-s3 = { version = "1.11.0", optional = true }
 aws-smithy-http = { version = "0.60.1", optional = true }
 aws-smithy-runtime-api = { version = "1.1.1", optional = true }
+
+# for cognito fdw
+aws-sdk-cognitoidentityprovider = {version ="1.10.0", optional = true}
+
 
 csv = { version = "1.2", optional = true }
 tokio = { version = "1", features = ["full"], optional = true }
