feat: add redis foreign data wrapper

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -15,6 +15,7 @@ nav:
       - ClickHouse: 'clickhouse.md'
       - Firebase: 'firebase.md'
       - Logflare: 'logflare.md'
+      - Redis: 'redis.md'
       - S3: 's3.md'
       - Stripe: 'stripe.md'
       - SQL Server: 'mssql.md'
