--- a/.github/workflows/test_wrappers.yml
+++ b/.github/workflows/test_wrappers.yml
@@ -22,6 +22,14 @@ jobs:
       with:
         toolchain: stable
 
+    - name: Format code
+      run: |
+        cargo fmt --check
+
+    - name: Run clippy
+      run: |
+        cargo clippy --all --tests --no-deps --features all_fdws,helloworld_fdw
+
     - run: |
         sudo apt remove -y postgres*
         sudo apt-get install -y wget gnupg
