move profiles to workspace to fix a warning

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,13 @@
 [workspace]
 members = ["supabase-wrappers", "wrappers"]
 resolver = "2"
+
+[profile.dev]
+panic = "unwind"
+lto = "thin"
+
+[profile.release]
+panic = "unwind"
+opt-level = 3
+lto = "fat"
+codegen-units = 1
