--- a/supabase-wrappers/Cargo.toml
+++ b/supabase-wrappers/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "supabase-wrappers"
-version = "0.1.16"
+version = "0.1.17"
 edition = "2021"
 authors = ["Supabase Inc. https://supabase.com/"]
 license = "Apache-2.0"
@@ -21,7 +21,7 @@ pg_test = []
 [dependencies]
 pgrx = { version = "=0.11.2", default-features = false }
 thiserror = "1.0.48"
-tokio = { version = "1.24", features = ["rt"] }
+tokio = { version = "1.35", features = ["rt", "net"] }
 uuid = { version = "1.2.2" }
 supabase-wrappers-macros = { version = "0.1", path = "../supabase-wrappers-macros" }
 
