--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -118,6 +118,16 @@ redis_fdw = [
     "serde_json",
     "thiserror",
 ]
+notion_fdw = [
+    "reqwest",
+    "reqwest-middleware",
+    "reqwest-retry",
+    "http",
+    "serde_json",
+    "serde",
+    "url",
+    "thiserror",
+]
 # Does not include helloworld_fdw because of its general uselessness
 all_fdws = [
     "airtable_fdw",
@@ -131,6 +141,7 @@ all_fdws = [
     "mssql_fdw",
     "redis_fdw",
     "cognito_fdw",
+    "notion_fdw",
 ]
 
 [dependencies]
