--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,14 @@
 [workspace]
-members = ["wrappers", "supabase-wrappers", "supabase-wrappers-macros"]
+members = [
+    "supabase-wrappers",
+    "supabase-wrappers-macros",
+    "wrappers",
+]
+exclude = [
+    "wasm-wrappers/fdw/helloworld_fdw",
+    "wasm-wrappers/fdw/snowflake_fdw",
+    "wasm-wrappers/fdw/paddle_fdw",
+]
 resolver = "2"
 
 [profile.dev]
@@ -11,3 +20,4 @@ panic = "unwind"
 opt-level = 3
 lto = "fat"
 codegen-units = 1
+
