--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -118,6 +118,24 @@ redis_fdw = [
     "serde_json",
     "thiserror",
 ]
+wasm_fdw = [
+    "wasmtime",
+    "warg-client",
+    "warg-protocol",
+    "chrono",
+    "dirs",
+    "sha2",
+    "hex",
+    "thiserror",
+    "anyhow",
+    "reqwest",
+    "reqwest-middleware",
+    "reqwest-retry",
+    "semver",
+    "serde",
+    "serde_json",
+    "jwt-simple",
+]
 # Does not include helloworld_fdw because of its general uselessness
 all_fdws = [
     "airtable_fdw",
@@ -154,7 +172,7 @@ wiremock = { version = "0.5", optional = true }
 futures = { version = "0.3", optional = true }
 
 # for stripe_fdw, firebase_fdw, logflare_fdw and etc.
-reqwest = { version = "0.11.20", features = ["json"], optional = true }
+reqwest = { version = "0.11.20", features = ["json", "gzip"], optional = true }
 reqwest-middleware = { version = "0.2.3", optional = true }
 reqwest-retry = { version = "0.2.2", optional = true }
 
@@ -201,7 +219,22 @@ num-traits = { version = "0.2.17", optional = true }
 # for redis_fdw
 redis = { version = "0.24.0", features = ["streams"], optional = true }
 
+# for wasm_fdw
+wasmtime = { version = "21.0.1", features = [
+    "runtime",
+    "cranelift",
+    "component-model",
+], default-features = false, optional = true }
+warg-client = { version = "0.7.0", optional = true }
+warg-protocol = { version = "0.7.0", optional = true }
+semver = { version = "1.0.23", optional = true }
+jwt-simple = { version = "0.12.9", optional = true }
+dirs = { version = "5.0.1", optional = true }
+sha2 = { version = "0.10.8", optional = true }
+hex = { version = "0.4.3", optional = true }
+
 thiserror = { version = "1.0.48", optional = true }
+anyhow  = { version = "1.0.81", optional = true }
 
 [dev-dependencies]
 pgrx-tests = "=0.11.3"
