docs: add docs for wasm fdws

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -17,8 +17,10 @@ nav:
       - Firebase: 'firebase.md'
       - Logflare: 'logflare.md'
       - Notion: 'notion.md'
+      - Paddle: 'paddle.md'
       - Redis: 'redis.md'
       - S3: 's3.md'
+      - Snowflake: 'snowflake.md'
       - Stripe: 'stripe.md'
       - SQL Server: 'mssql.md'
     - Contributing: 'contributing.md'
