--- a/.github/workflows/release_wasm_fdw.yml
+++ b/.github/workflows/release_wasm_fdw.yml
@@ -91,7 +91,7 @@ jobs:
               ...
             );
 
-          For more detials, please visit https://supabase.github.io/wrappers/wasm/.
+          For more details, please visit https://supabase.github.io/wrappers/wasm/.
           EOF
 
       - name: Create release
