--- a/supabase-wrappers/Cargo.toml
+++ b/supabase-wrappers/Cargo.toml
@@ -13,6 +13,7 @@ keywords = ["database", "postgres", "postgresql", "extension"]
 [features]
 default = ["cshim", "pg15"]
 cshim = ["pgrx/cshim"]
+pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
 pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
 pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
 pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
