--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 [features]
 default = ["cshim", "pg15"]
 cshim = ["pgrx/cshim"]
+pg13 = ["pgrx/pg13", "pgrx-tests/pg13", "supabase-wrappers/pg13"]
 pg14 = ["pgrx/pg14", "pgrx-tests/pg14", "supabase-wrappers/pg14"]
 pg15 = ["pgrx/pg15", "pgrx-tests/pg15", "supabase-wrappers/pg15"]
 pg16 = ["pgrx/pg16", "pgrx-tests/pg16", "supabase-wrappers/pg16"]
