--- a/.github/workflows/test_wrappers.yml
+++ b/.github/workflows/test_wrappers.yml
@@ -12,11 +12,11 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Build docker images
       run: |
-        docker-compose -f wrappers/.ci/docker-compose.yaml up -d
+        docker compose -f wrappers/.ci/docker-compose.yaml up -d
 
     - uses: actions-rs/toolchain@v1
       with:
