--- a/wrappers/.ci/docker-compose.yaml
+++ b/wrappers/.ci/docker-compose.yaml
@@ -1,156 +1,3 @@
-services:
-
-  airtable:
-    container_name: airtable-local
-    build:
-      context: ../dockerfiles/airtable
-    ports:
-      - "8086:8086"
-    healthcheck:
-      test: curl --fail http://0.0.0.0:8086/baseID/table-foo || exit 1
-      interval: 10s
-      timeout: 5s
-      retries: 3
-
-  auth0:
-    container_name: auth0-local
-    build:
-      context: ../dockerfiles/auth0
-    ports:
-      - "3796:3796"
-    healthcheck:
-      test: curl --fail http://0.0.0.0:3796/ || exit 1
-      interval: 11s
-      timeout: 6s
-      retries: 3
-
-  clickhouse:
-    image: clickhouse/clickhouse-server
-    container_name: clickhouse-wrapped
-    ports:
-      - "9000:9000" # native interface
-      - "8123:8123" # http interface
-    healthcheck:
-      test: sleep 4 && wget --no-verbose --tries=1 --spider http://localhost:8123/?query=SELECT%201 || exit 1
-      interval: 10s
-      timeout: 5s
-      retries: 20
-
-  cognito:
-    image: jagregory/cognito-local
-    ports:
-      - "9229:9229"
-    volumes:
-      - ../dockerfiles/cognito/.cognito:/app/.cognito
-    healthcheck:
-      test: curl --fail http://0.0.0.0:9229/ || exit 1
-      interval: 11s
-      timeout: 6s
-      retries: 3
-
-  stripe:
-    image: stripe/stripe-mock:v0.144.0
-    container_name: stripe-mock
-    ports:
-      - "12111:12111"
-    healthcheck:
-      test: sleep 4
-      retries: 20
-      
-  firebase:
-    image: andreysenov/firebase-tools:11.24.1-node-14-alpine
-    container_name: firebase-wrapped
-    command: firebase emulators:start --project supa --only auth,firestore --import=/baseline-data
-    volumes:
-      - ../dockerfiles/firebase/baseline-data:/baseline-data
-      - ../dockerfiles/firebase/firebase.json:/home/node/firebase.json
-    ports:
-      - "4000:4000" # UI
-      - "8080:8080" # Firestore
-      - "9099:9099" # Auth
-    healthcheck:
-      test: sleep 4 && wget --no-verbose --tries=1 --spider http://localhost:9099/ || exit 1
-      interval: 10s
-      timeout: 5s
-      retries: 30
-
-  bigquery:
-    container_name: bigquery-local
-    build:
-      context: ../..
-      dockerfile: ./wrappers/dockerfiles/bigquery/Dockerfile
-    volumes:
-      - ../dockerfiles/bigquery/data.yaml:/app/data.yaml
-    ports:
-      - "9111:9111" # REST
-      - "9060:9060" # gRPC
-    command: --project=test --dataset=dataset1 --data-from-yaml=/app/data.yaml --port=9111
-    healthcheck:
-      test: curl --fail http://0.0.0.0:9111/bigquery/v2/projects/test_project/datasets/test_dataset || exit 1
-      interval: 10s
-      timeout: 5s
-      retries: 3
-
-  s3:
-    image: localstack/localstack
-    container_name: s3-mock
-    volumes:
-      - ../dockerfiles/s3/test_data:/data
-      - ../dockerfiles/s3/init:/etc/localstack/init/ready.d
-    ports:
-      - "4566:4566"
-      - "4510-4559:4510-4559"
-    healthcheck:
-      test: curl --fail http://127.0.0.1:4566/_localstack/init || exit 1
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      
-  mssql:
-    image: mcr.microsoft.com/mssql/server:2019-latest
-    container_name: mssql-wrapped
-    environment:
-      ACCEPT_EULA: Y
-      MSSQL_SA_PASSWORD: Password1234_56
-    ports:
-      - "1433:1433"
-    healthcheck:
-      test: (echo >/dev/tcp/127.0.0.1/1433) &>/dev/null && echo "okay" || exit 1
-      interval: 10s
-      timeout: 5s
-      retries: 20
-
-  redis:
-    image: redis:6.2-alpine
-    container_name: redis-wrapped
-    ports:
-      - "6379:6379"
-    healthcheck:
-      test: (nc -vz localhost 6379) &>/dev/null && echo "okay" || exit 1
-      interval: 10s
-      timeout: 5s
-      retries: 20
-
-  notion:
-    container_name: notion-local
-    build:
-      context: ../dockerfiles/notion
-    ports:
-      - "4242:4242"
-    healthcheck:
-      test: curl --fail http://0.0.0.0:4242/ || exit 1
-      interval: 11s
-      timeout: 6s
-      retries: 3
-
-  wasm:
-    container_name: wasm-local
-    build:
-      context: ../dockerfiles/wasm
-    ports:
-      - "8096:8096"
-    healthcheck:
-      test: curl --fail http://0.0.0.0:8096/paddle || exit 1
-      interval: 10s
-      timeout: 5s
-      retries: 3
+include:
+  - docker-compose-native.yaml
+  - docker-compose-wasm.yaml
