docs: update docs for paddle and snowflake fdw new version

--- a/.github/workflows/release_wasm_fdw.yml
+++ b/.github/workflows/release_wasm_fdw.yml
@@ -97,7 +97,7 @@ jobs:
               ...
             );
 
-          For more details, please visit https://supabase.github.io/wrappers/.
+          For more details, please visit https://fdw.dev.
           EOF
 
       - name: Create release
