--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -165,7 +165,7 @@ all_fdws = [
 ]
 
 [dependencies]
-pgrx = { version = "0.12.1" }
+pgrx = { version = "=0.12.1" }
 #supabase-wrappers = "0.1"
 supabase-wrappers = { path = "../supabase-wrappers", default-features = false }
 
@@ -250,4 +250,4 @@ thiserror = { version = "1.0.48", optional = true }
 anyhow  = { version = "1.0.81", optional = true }
 
 [dev-dependencies]
-pgrx-tests = "0.12.1"
+pgrx-tests = "=0.12.1"
