--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -26,7 +26,7 @@ bigquery_fdw = [
     "yup-oauth2",
     "thiserror",
 ]
-clickhouse_fdw = ["clickhouse-rs", "chrono", "chrono-tz", "regex", "thiserror"]
+clickhouse_fdw = ["clickhouse-rs", "chrono", "chrono-tz", "regex", "thiserror", "either"]
 stripe_fdw = [
     "http",
     "reqwest",
@@ -170,11 +170,12 @@ pgrx = { version = "=0.11.3" }
 supabase-wrappers = { path = "../supabase-wrappers", default-features = false }
 
 # for clickhouse_fdw
-clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs", rev = "ecf28f4677", features = [
+clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs", rev = "abfe517101eefe36bfdb7da248690659aa284ad3", features = [
     "tls",
 ], optional = true }
 chrono = { version = "0.4", optional = true }
 chrono-tz = { version = "0.6", optional = true }
+either = { version = "1.12.0", optional = true }
 
 
 # for bigquery_fdw, firebase_fdw, airtable_fdw and etc.
