--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ exclude = [
     "wasm-wrappers/fdw/helloworld_fdw",
     "wasm-wrappers/fdw/snowflake_fdw",
     "wasm-wrappers/fdw/paddle_fdw",
+    "wasm-wrappers/fdw/notion_fdw",
 ]
 resolver = "2"
 
