--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,8 +37,8 @@ jobs:
         extension_name:
           - wrappers
         pgrx_version:
-          - 0.11.3
-        postgres: [14, 15, 16]
+          - 0.12.6
+        postgres: [14, 15, 16, 17]
         features:
           - "all_fdws"
         box:
