--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -140,6 +140,10 @@ wasm_fdw = [
     "serde_json",
     "jwt-simple",
 ]
+duckdb_fdw = [
+    "duckdb",
+    "thiserror",
+]
 # Does not include helloworld_fdw because of its general uselessness
 native_fdws = [
     "airtable_fdw",
@@ -241,6 +245,9 @@ jwt-simple = { version = "0.12.9", default-features = false, features = [
 dirs = { version = "5.0.1", optional = true }
 sha2 = { version = "0.10.8", optional = true }
 hex = { version = "0.4.3", optional = true }
+
+# for duckdb_fdw
+duckdb = { version = "1.1.1", features = ["bundled"], optional = true }
 
 thiserror = { version = "1.0.48", optional = true }
 anyhow  = { version = "1.0.81", optional = true }
