--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -224,7 +224,7 @@ tiberius = { version = "0.12.2", features = [
 num-traits = { version = "0.2.17", optional = true }
 
 # for redis_fdw
-redis = { version = "0.24.0", features = ["streams"], optional = true }
+redis = { version = "0.27.5", features = ["streams", "tls-rustls", "tls-rustls-insecure"], optional = true }
 
 # for wasm_fdw
 wasmtime = { version = "26.0.1", features = [
