--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -241,7 +241,7 @@ jwt-simple = { version = "0.12.9", default-features = false, features = [
 dirs = { version = "5.0.1", optional = true }
 sha2 = { version = "0.10.8", optional = true }
 hex = { version = "0.4.3", optional = true }
-
+bytes = "1.9.0"
 thiserror = { version = "1.0.48", optional = true }
 anyhow  = { version = "1.0.81", optional = true }
 
