--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -139,6 +139,7 @@ wasm_fdw = [
     "serde",
     "serde_json",
     "jwt-simple",
+    "bytes",
 ]
 # Does not include helloworld_fdw because of its general uselessness
 native_fdws = [
@@ -241,7 +242,7 @@ jwt-simple = { version = "0.12.9", default-features = false, features = [
 dirs = { version = "5.0.1", optional = true }
 sha2 = { version = "0.10.8", optional = true }
 hex = { version = "0.4.3", optional = true }
-bytes = "1.9.0"
+bytes = { version = "1.9.0", optional = true }
 thiserror = { version = "1.0.48", optional = true }
 anyhow  = { version = "1.0.81", optional = true }
 
