feat(wasm): add Clerk Wasm FDW

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ exclude = [
     "wasm-wrappers/fdw/cal_fdw",
     "wasm-wrappers/fdw/calendly_fdw",
     "wasm-wrappers/fdw/cfd1_fdw",
+    "wasm-wrappers/fdw/clerk_fdw",
     "wasm-wrappers/fdw/helloworld_fdw",
     "wasm-wrappers/fdw/snowflake_fdw",
     "wasm-wrappers/fdw/paddle_fdw",
