revert tmp changes

--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -11,10 +11,12 @@ crate-type = ["cdylib", "lib"]
 name = "pgrx_embed_wrappers"
 path = "./src/bin/pgrx_embed.rs"
 
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pgrx_embed)'] }
+
 [features]
 default = ["cshim", "pg15"]
 cshim = ["pgrx/cshim"]
-pg12 = ["pgrx/pg13", "pgrx-tests/pg12", "supabase-wrappers/pg12"]
 pg13 = ["pgrx/pg13", "pgrx-tests/pg13", "supabase-wrappers/pg13"]
 pg14 = ["pgrx/pg14", "pgrx-tests/pg14", "supabase-wrappers/pg14"]
 pg15 = ["pgrx/pg15", "pgrx-tests/pg15", "supabase-wrappers/pg15"]
