feat(wasm): add import foreign schema support to wasm fdw

--- a/wasm-wrappers/fdw/clerk_fdw/Cargo.toml
+++ b/wasm-wrappers/fdw/clerk_fdw/Cargo.toml
@@ -19,4 +19,4 @@ package = "supabase:clerk-fdw"
 path = "wit"
 
 [package.metadata.component.target.dependencies]
-"supabase:wrappers" = { path = "../../wit" }
+"supabase:wrappers" = { path = "../../wit/v1" }
