--- a/wasm-wrappers/fdw/calendly_fdw/Cargo.toml
+++ b/wasm-wrappers/fdw/calendly_fdw/Cargo.toml
@@ -20,4 +20,4 @@ package = "supabase:calendly-fdw"
 path = "wit"
 
 [package.metadata.component.target.dependencies]
-"supabase:wrappers" = { path = "../../wit" }
+"supabase:wrappers" = { path = "../../wit/v1" }
