--- a/wasm-wrappers/fdw/cfd1_fdw/Cargo.toml
+++ b/wasm-wrappers/fdw/cfd1_fdw/Cargo.toml
@@ -19,4 +19,4 @@ package = "supabase:cfd1-fdw"
 path = "wit"
 
 [package.metadata.component.target.dependencies]
-"supabase:wrappers" = { path = "../../wit" }
+"supabase:wrappers" = { path = "../../wit/v1" }
