--- a/wasm-wrappers/fdw/helloworld_fdw/Cargo.toml
+++ b/wasm-wrappers/fdw/helloworld_fdw/Cargo.toml
@@ -18,4 +18,4 @@ package = "supabase:helloworld-fdw"
 path = "wit"
 
 [package.metadata.component.target.dependencies]
-"supabase:wrappers" = { path = "../../wit" }
+"supabase:wrappers" = { path = "../../wit/v1" }
