--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -142,6 +142,7 @@ wasm_fdw = [
     "serde_json",
     "jwt-simple",
     "bytes",
+    "uuid",
 ]
 # Does not include helloworld_fdw because of its general uselessness
 native_fdws = [
@@ -246,6 +247,7 @@ hex = { version = "0.4.3", optional = true }
 bytes = { version = "1.9.0", optional = true }
 thiserror = { version = "1.0.48", optional = true }
 anyhow  = { version = "1.0.81", optional = true }
+uuid = { version = "1.16.0", optional = true }
 
 [dev-dependencies]
 pgrx-tests = "=0.12.9"
